--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Data Source=DSIMONI\\SQLEXPRESS;Database=Business_Code;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConnectionString": "Data Source=SQL5080.site4now.net;Initial Catalog=DB_A68000_dsimoni;User Id=DB_A68000_dsimoni_admin;Password=streetfighter_12;"
   }
 }
