--- a/.gitignore
+++ b/.gitignore
@@ -473,3 +473,5 @@ obj/Release/netcoreapp3.1/Razor/Views/Shared/_Layout.cshtml.g.cs
 obj/Release/netcoreapp3.1/Razor/Views/Shared/_ValidationScriptsPartial.cshtml.g.cs
 obj/Release/netcoreapp3.1/Razor/Views/Shared/Error.cshtml.g.cs
 obj/Release/netcoreapp3.1/staticwebassets/JustScan.StaticWebAssets.xml
+obj/Debug/netcoreapp3.1/project.razor.json
+obj/Debug/netcoreapp3.1/project.razor.json
