--- a/.gitignore
+++ b/.gitignore
@@ -503,3 +503,4 @@ obj/Debug/netcoreapp3.1/project.razor.json
 .vs/JustScan/DesignTimeBuild/.dtbcache.v2
 .vs/JustScan/v16/.suo
 obj/Debug/netcoreapp3.1/project.razor.json
+obj/Debug/netcoreapp3.1/project.razor.json
