--- a/.gitignore
+++ b/.gitignore
@@ -504,3 +504,5 @@ obj/Debug/netcoreapp3.1/project.razor.json
 .vs/JustScan/v16/.suo
 obj/Debug/netcoreapp3.1/project.razor.json
 obj/Debug/netcoreapp3.1/project.razor.json
+.vs/JustScan/DesignTimeBuild/.dtbcache.v2
+.vs/JustScan/v16/.suo
